kubernetes/ingress/hrms-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hrms-ingress
  namespace: hrms
spec:
  ingressClassName: traefik
  rules:
  - host: hrms.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hrms-frontend-service
            port:
              number: 80

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: hrms-backend-service
            port:
              number: 80
